--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'Oswald';
-  src:
-    url('../assets/fonts/Oswald/Oswald-Regular.woff2') format('woff2'),
+  src: url('../assets/fonts/Oswald/Oswald-Regular.woff2') format('woff2'),
     url('../assets/fonts/Oswald/Oswald-Regular.woff') format('woff');
   font-weight: 400;
   font-display: swap;
@@ -9,8 +8,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src:
-    url('../assets/fonts/Inter/Inter-Medium.woff2') format('woff2'),
+  src: url('../assets/fonts/Inter/Inter-Medium.woff2') format('woff2'),
     url('../assets/fonts/Inter/Inter-Medium.woff') format('woff');
   font-weight: 500;
   font-display: swap;
@@ -18,8 +16,7 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src:
-    url('../assets/fonts/OpenSans/OpenSans-Regular.woff2') format('woff2'),
+  src: url('../assets/fonts/OpenSans/OpenSans-Regular.woff2') format('woff2'),
     url('../assets/fonts/OpenSans/OpenSans-Regular.woff') format('woff');
   font-weight: 400;
   font-display: swap;
@@ -27,8 +24,7 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src:
-    url('../assets/fonts/OpenSans/OpenSans-SemiBold.woff2') format('woff2'),
+  src: url('../assets/fonts/OpenSans/OpenSans-SemiBold.woff2') format('woff2'),
     url('../assets/fonts/OpenSans/OpenSans-SemiBold.woff') format('woff');
   font-weight: 600;
   font-display: swap;
@@ -36,8 +32,7 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src:
-    url('../assets/fonts/OpenSans/OpenSans-Bold.woff2') format('woff2'),
+  src: url('../assets/fonts/OpenSans/OpenSans-Bold.woff2') format('woff2'),
     url('../assets/fonts/OpenSans/OpenSans-Bold.woff') format('woff');
   font-weight: 700;
   font-display: swap;
@@ -67,7 +62,7 @@
   /* Красная палитра */
   --color-red-100: #fdf2fa;
   --color-red-500: #c11574;
-/*
+  /*
   /* Радиусы */
   --border-radius-s: 8px;
 
@@ -78,7 +73,7 @@
     rgba(0, 98, 185, 0.8)
   );
 
-   /* --color-black-100: #171718; */
+  /* --color-black-100: #171718; */
   /* --color-black-200: #26292d; */
 }
 
@@ -158,8 +153,15 @@ img {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 1268px) {
   .container {
+    max-width: 1068px;
+  }
+}
+
+@media only screen and (max-width: 1096px) {
+  .container {
+    max-width: 100%;
     padding-left: 16px;
     padding-right: 16px;
   }
